// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Slices/Section For Demo Default 1`] = `
<section
  className="container section_for_demo theme_default "
>
  <div
    className="container_content spacing_large width_fluid"
  >
    <header>
      <h1>
        Target magnetic systems
      </h1>
      <p>
        Veniam nulla cillum laboris minim amet duis fugiat. Adipisicing incididunt labore non excepteur est sunt non voluptate ex labore excepteur et anim.
      </p>
    </header>
    <div
      className="grid gap_20 layout_is_one_third"
    >
      <a
        className="card text_alignment_left theme_default"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            height={500}
            sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            src="https://images.unsplash.com/photo-1587840171670-8b850147754e?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
            srcSet="https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
            width={900}
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
      <a
        className="card text_alignment_left theme_default"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            height={500}
            sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
            srcSet="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
            width={900}
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
      <a
        className="card text_alignment_left theme_default"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            height={500}
            sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            src="https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
            srcSet="https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
            width={900}
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
    </div>
  </div>
</section>
`;

exports[`Storyshots Slices/Section For Demo Without Header 1`] = `
<section
  className="container section_for_demo theme_withoutHeader "
>
  <div
    className="container_content spacing_large width_fluid"
  >
    <div
      className="grid gap_20 layout_is_one_third"
    >
      <a
        className="card text_alignment_left theme_with_button"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            height={500}
            sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            src="https://images.unsplash.com/photo-1587840171670-8b850147754e?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
            srcSet="https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1587840171670-8b850147754e?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
            width={900}
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
      <a
        className="card text_alignment_left theme_with_button"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            height={500}
            sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
            srcSet="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
            width={900}
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
      <a
        className="card text_alignment_left theme_with_button"
        href="https://ample.co"
        rel="noreferrer"
        target="_blank"
      >
        <div
          className="imgix_image card_image"
        >
          <img
            alt="Placeholder image"
            height={500}
            sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
            src="https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
            srcSet="https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1601933973783-43cf8a7d4c5f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
            width={900}
          />
        </div>
        <div
          className="card_content"
        >
          <p>
            Ullamco consectetur elit veniam reprehenderit aliqua et anim culpa mollit quis eiusmod velit labore duis. Laboris nulla proident duis nisi. Anim elit esse Lorem ut laboris commodo commodo aliqua nostrud cupidatat dolore aute occaecat.
          </p>
          <p>
            Tempor voluptate ad cupidatat reprehenderit ea anim qui laboris sint adipisicing duis fugiat.
          </p>
          <button
            className="button theme_default"
          >
            Quis ex consequat.
          </button>
        </div>
      </a>
    </div>
  </div>
</section>
`;
